This is phplotdocs/ChangeLog, listing changes to the PHPlot Reference Manual
-----------------------------------------------------------------------------
Note: This is a more complete ChangeLog than the one in Appendix A of the
manual, which only contains summaries of changes.
-----------------------------------------------------------------------------

2009-12-20
   * concepts.xml: Fix description of data type 'text-data'. Under Data types,
     it incorrectly said X=0, 1, 2. Under Plot Types, it correctly said it was
     X=0.5, 1.5, 2.5 but this was missing under 3 of the plot types.

2009-12-18
   Changes related to new Data Colors list:
   * concepts.xml: List the new default data colors, including a color table.
   * variables.list: Add default_colors. Change data_colors,
     error_bar_colors, and data_border_colors.
   * reference.xml: Updated SetDataColors(), SetErrorBarColors(),
     and SetDataBorderColors(). Document new defaults and use of '' to reset
     the maps.

2009-12-14
   Changes related to new Data Label Types controls:
   * concepts.xml: Updated information on tick and data label functions;
     add missing label format types.

   * developer.xml: Document new internal CheckLabels(). Add references to
     new Set[XY]DataLabelType in label formatting, and update descriptions
     of internals FormatLabel() and SetLabelType().

   * functions.xml: Add links to 4 new functions and remove link to
     removed link to function SetDrawYDataLabelLines().

   * reference.xml: Documented 4 new functions Set[XY]DataLabelAngle() and
     Set[XY]DataLabelType().
     Updated descriptions of Set[X]LabelAngle() and Set[XY]LabelType(),
     to reference the new functions, document use of '' as a format type.
     Updated descriptions of SetXDataLabelPos() and SetXTickLabelPos() to
     indicate the change in interaction between these two and how the
     defaults work now.
     Removed function SetDrawYDataLabelLines().  This was never implemented